--- a/dna-frontend/src/app/pages/debts/debts.component.scss
+++ b/dna-frontend/src/app/pages/debts/debts.component.scss
@@ -9,7 +9,7 @@
 }
 
 .debts-form {
-  height: 100%;
+  height: auto;
   width: 100%;
 
   > * {
@@ -23,7 +23,7 @@
 }
 
 .debts-result-container {
-  height: 100%;
+  height: auto;
   width: 100%;
 
   > * {
